// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MailSignatureGenerator should generate a mail signature with dortmund address 1`] = `
"<body>
<div id=\\"signature\\">
<table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
  <tbody>
    <tr>
      <td>
        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
          <tbody>
            <tr>
              <td style=\\"vertical-align: top;\\">
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                  <tbody>
                    <tr>
                      <td style=\\"text-align: center;\\">
                        <img src=\\"https://newcubator.com/images/mailsignature/joerg-goerisch.png\\" role=\\"presentation\\" width=\\"130\\" style=\\"max-width: 128px; display: block;\\">
                      </td>
                    </tr>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                      <tr>
                        <td style=\\"text-align: center;\\">
                          <img src=\\"https://newcubator.com/images/mailsignature/nc-logo.png\\" role=\\"presentation\\" width=\\"130\\" style=\\"max-width: 130px; display: block;\\">
                        </td>
                      </tr>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                    <tr>
                      <td style=\\"text-align: center;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial; display: inline-block;\\">
                          <tbody>
                            <tr style=\\"text-align: center;\\">
                              <td>
                                <a href=\\"https://twitter.com/newcubator\\" color=\\"#50505E\\" style=\\"display: inline-block; padding: 0px; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/twitter-icon-2x.png\\" alt=\\"twitter\\" color=\\"#50505E\\" height=\\"24\\" style=\\"background-color: rgba(255, 255, 255, 0); max-width: 135px; display: block;\\">
                                </a>
                              </td>
                              <td width=\\"5\\">
                                <div></div>
                              </td>
                              <td>
                                <a href=\\"https://www.linkedin.com/company/newcubator/\\" color=\\"#50505E\\" style=\\"display: inline-block; padding: 0px; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/linkedin-icon-2x.png\\" alt=\\"linkedin\\" color=\\"#50505E\\" height=\\"24\\" style=\\"background-color: rgba(255, 255, 255, 0); max-width: 135px; display: block;\\">
                                </a>
                              </td>
                              <td width=\\"5\\">
                                <div></div>
                              </td>
                              <td>
                                <a href=\\"https://www.instagram.com/newcubator/?hl=de\\" color=\\"#50505E\\" style=\\"display: inline-block; padding: 0px; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/instagram-icon-2x.png\\" alt=\\"instagram\\" color=\\"#50505E\\" height=\\"24\\" style=\\"background-color: rgba(255, 255, 255, 0); max-width: 135px; display: block;\\">
                                </a>
                              </td>
                              <td width=\\"5\\">
                                <div></div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
              <td width=\\"46\\">
                <div></div>
              </td>
              <td style=\\"padding: 0px; vertical-align: middle;\\">
                <h3 color=\\"#50505e\\" style=\\"margin: 0px; font-size: 18px; color: rgb(80, 80, 94);\\">
                  <span>J&ouml;rg</span> <span>G&ouml;risch</span>
                </h3>
                <p color=\\"#50505e\\" font-size=\\"medium\\" style=\\"margin: 0px; font-weight: 500; color: rgb(80, 80, 94); font-size: 14px; line-height: 22px;\\">
                  <span>Testsubject</span><span>&nbsp;|&nbsp;</span><span>newcubator GmbH</span>
                </p>
                <p color=\\"#50505e\\" font-size=\\"medium\\" style=\\"color: rgb(80, 80, 94); margin: 0px; font-size: 14px; line-height: 22px;\\">
                  <span>Gesch&auml;ftsf&uuml;hrer: J&ouml;rg Herbst</span>
                </p>
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial; width: 100%;\\">
                  <tbody>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                    <tr>
                      <td color=\\"#405780\\" direction=\\"horizontal\\" height=\\"1\\" style=\\"width: 100%; border-bottom: 1px solid rgb(64, 87, 128); border-left: none; display: block;\\"></td>
                    </tr>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                  </tbody>
                </table>
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                  <tbody>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/phone-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px; color: rgb(80, 80, 94);\\">
                        <a href=\\"tel:+49 231 58687380\\" color=\\"#50505e\\" style=\\"text-decoration: none; color: rgb(80, 80, 94); font-size: 12px;\\">
                          <span>+49 231 58687380</span>
                        </a>
                      </td>
                    </tr>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/email-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px;\\">
                        <a href=\\"mailto:joerg.goerisch@newcubator.com\\" color=\\"#50505e\\" style=\\"text-decoration: none; color: rgb(80, 80, 94); font-size: 12px;\\">
                          <span>joerg.goerisch@newcubator.com</span>
                        </a>
                      </td>
                    </tr>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/link-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px;\\">
                        <a href=\\"//newcubator.com\\" color=\\"#50505e\\" style=\\"text-decoration: none; color: rgb(80, 80, 94); font-size: 12px;\\">
                          <span>newcubator.com</span>
                        </a>
                      </td>
                    </tr>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/address-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px;\\">
                        <span color=\\"#50505e\\" style=\\"font-size: 12px; color: rgb(80, 80, 94);\\">
                          <span>Westenhellweg 85-89, 44137 Dortmund, Amtsgericht Hannover HRB 221930</span>
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                  <tbody>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
    <tr>
      <td>
        <a href=\\"https://newcubator.com/email-marketing-banner\\" style=\\"display: inline-block; padding: 0; width: 593px; background-color: rgba(255, 255, 255, 0);\\">
          <img src=\\"https://newcubator.com/images/email-marketing-banner/email-footer-image.jpg\\" alt=\\"newcubator banner\\" style=\\"display: block; width: 593px;\\">
        </a>
      </td>
    </tr>
  </tbody>
</table>
</div>
    <button onclick=\\"copy()\\">Copy to Clipboard</button>
</body>
<script type=\\"text/javascript\\">
function replaceUmlautsWithHtml(str) {
  return str
    .replace(/ä/g, \\"&auml;\\")
    .replace(/ö/g, \\"&ouml;\\")
    .replace(/ü/g, \\"&uuml;\\")
    .replace(/ß/g, \\"&szlig;\\")
    .replace(/Ä/g, \\"&Auml;\\")
    .replace(/Ö/g, \\"&Ouml;\\")
    .replace(/Ü/g, \\"&Uuml;\\");
}

function copy() {
    navigator.clipboard.writeText(replaceUmlautsWithHtml(document.getElementById('signature').innerHTML));
}
</script>"
`;

exports[`MailSignatureGenerator should generate a mail signature with hannover address 1`] = `
"<body>
<div id=\\"signature\\">
<table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
  <tbody>
    <tr>
      <td>
        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
          <tbody>
            <tr>
              <td style=\\"vertical-align: top;\\">
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                  <tbody>
                    <tr>
                      <td style=\\"text-align: center;\\">
                        <img src=\\"https://newcubator.com/images/mailsignature/joerg-goerisch.png\\" role=\\"presentation\\" width=\\"130\\" style=\\"max-width: 128px; display: block;\\">
                      </td>
                    </tr>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                      <tr>
                        <td style=\\"text-align: center;\\">
                          <img src=\\"https://newcubator.com/images/mailsignature/nc-logo.png\\" role=\\"presentation\\" width=\\"130\\" style=\\"max-width: 130px; display: block;\\">
                        </td>
                      </tr>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                    <tr>
                      <td style=\\"text-align: center;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial; display: inline-block;\\">
                          <tbody>
                            <tr style=\\"text-align: center;\\">
                              <td>
                                <a href=\\"https://twitter.com/newcubator\\" color=\\"#50505E\\" style=\\"display: inline-block; padding: 0px; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/twitter-icon-2x.png\\" alt=\\"twitter\\" color=\\"#50505E\\" height=\\"24\\" style=\\"background-color: rgba(255, 255, 255, 0); max-width: 135px; display: block;\\">
                                </a>
                              </td>
                              <td width=\\"5\\">
                                <div></div>
                              </td>
                              <td>
                                <a href=\\"https://www.linkedin.com/company/newcubator/\\" color=\\"#50505E\\" style=\\"display: inline-block; padding: 0px; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/linkedin-icon-2x.png\\" alt=\\"linkedin\\" color=\\"#50505E\\" height=\\"24\\" style=\\"background-color: rgba(255, 255, 255, 0); max-width: 135px; display: block;\\">
                                </a>
                              </td>
                              <td width=\\"5\\">
                                <div></div>
                              </td>
                              <td>
                                <a href=\\"https://www.instagram.com/newcubator/?hl=de\\" color=\\"#50505E\\" style=\\"display: inline-block; padding: 0px; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/instagram-icon-2x.png\\" alt=\\"instagram\\" color=\\"#50505E\\" height=\\"24\\" style=\\"background-color: rgba(255, 255, 255, 0); max-width: 135px; display: block;\\">
                                </a>
                              </td>
                              <td width=\\"5\\">
                                <div></div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
              <td width=\\"46\\">
                <div></div>
              </td>
              <td style=\\"padding: 0px; vertical-align: middle;\\">
                <h3 color=\\"#50505e\\" style=\\"margin: 0px; font-size: 18px; color: rgb(80, 80, 94);\\">
                  <span>J&ouml;rg</span> <span>G&ouml;risch</span>
                </h3>
                <p color=\\"#50505e\\" font-size=\\"medium\\" style=\\"margin: 0px; font-weight: 500; color: rgb(80, 80, 94); font-size: 14px; line-height: 22px;\\">
                  <span>Testsubject</span><span>&nbsp;|&nbsp;</span><span>newcubator GmbH</span>
                </p>
                <p color=\\"#50505e\\" font-size=\\"medium\\" style=\\"color: rgb(80, 80, 94); margin: 0px; font-size: 14px; line-height: 22px;\\">
                  <span>Gesch&auml;ftsf&uuml;hrer: J&ouml;rg Herbst</span>
                </p>
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial; width: 100%;\\">
                  <tbody>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                    <tr>
                      <td color=\\"#405780\\" direction=\\"horizontal\\" height=\\"1\\" style=\\"width: 100%; border-bottom: 1px solid rgb(64, 87, 128); border-left: none; display: block;\\"></td>
                    </tr>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                  </tbody>
                </table>
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                  <tbody>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/phone-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px; color: rgb(80, 80, 94);\\">
                        <a href=\\"tel:+49 511 95731300\\" color=\\"#50505e\\" style=\\"text-decoration: none; color: rgb(80, 80, 94); font-size: 12px;\\">
                          <span>+49 511 95731300</span>
                        </a>
                      </td>
                    </tr>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/email-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px;\\">
                        <a href=\\"mailto:joerg.goerisch@newcubator.com\\" color=\\"#50505e\\" style=\\"text-decoration: none; color: rgb(80, 80, 94); font-size: 12px;\\">
                          <span>joerg.goerisch@newcubator.com</span>
                        </a>
                      </td>
                    </tr>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/link-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px;\\">
                        <a href=\\"//newcubator.com\\" color=\\"#50505e\\" style=\\"text-decoration: none; color: rgb(80, 80, 94); font-size: 12px;\\">
                          <span>newcubator.com</span>
                        </a>
                      </td>
                    </tr>
                    <tr height=\\"25\\" style=\\"vertical-align: middle;\\">
                      <td width=\\"30\\" style=\\"vertical-align: middle;\\">
                        <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                          <tbody>
                            <tr>
                              <td style=\\"vertical-align: bottom;\\">
                                <span color=\\"#405780\\" width=\\"11\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                  <img src=\\"https://newcubator.com/images/mailsignature/address-icon-2x.png\\" color=\\"#405780\\" width=\\"13\\" style=\\"display: block; background-color: rgba(255, 255, 255, 0);\\">
                                </span>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </td>
                      <td style=\\"padding: 0px;\\">
                        <span color=\\"#50505e\\" style=\\"font-size: 12px; color: rgb(80, 80, 94);\\">
                          <span>B&ouml;dekerstra&szlig;e 22, 30161 Hannover, Amtsgericht Hannover HRB 221930</span>
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
                <table cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial;\\">
                  <tbody>
                    <tr>
                      <td height=\\"30\\"></td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
    <tr>
      <td>
        <a href=\\"https://newcubator.com/email-marketing-banner\\" style=\\"display: inline-block; padding: 0; width: 593px; background-color: rgba(255, 255, 255, 0);\\">
          <img src=\\"https://newcubator.com/images/email-marketing-banner/email-footer-image.jpg\\" alt=\\"newcubator banner\\" style=\\"display: block; width: 593px;\\">
        </a>
      </td>
    </tr>
  </tbody>
</table>
</div>
    <button onclick=\\"copy()\\">Copy to Clipboard</button>
</body>
<script type=\\"text/javascript\\">
function replaceUmlautsWithHtml(str) {
  return str
    .replace(/ä/g, \\"&auml;\\")
    .replace(/ö/g, \\"&ouml;\\")
    .replace(/ü/g, \\"&uuml;\\")
    .replace(/ß/g, \\"&szlig;\\")
    .replace(/Ä/g, \\"&Auml;\\")
    .replace(/Ö/g, \\"&Ouml;\\")
    .replace(/Ü/g, \\"&Uuml;\\");
}

function copy() {
    navigator.clipboard.writeText(replaceUmlautsWithHtml(document.getElementById('signature').innerHTML));
}
</script>"
`;
